@@ -2,6 +2,7 @@ package domain;
 
 import static org.junit.jupiter.api.Assertions.*;
 import java.util.Arrays;
+import java.util.List;
 import domain.exception.BasketExceedMaxQuantityException;
 import domain.model.Basket;
 import domain.model.Category;
@@ -78,7 +79,13 @@ class BasketTest {
         MenuItem item = new MenuItem("Sea Food salad", 12.0, Category.SOUP);
         basket.addWithQuantity(item, 5);
         Coupon coupon1 = new Coupon("DELIVERICIOUS_10", 10.0);
-        CouponService couponService = new CouponService(Arrays.asList(coupon1));
+        CouponService couponService = new CouponService(List.of(coupon1));
         assertTrue(couponService.suggestCoupon(basket).contains(coupon1));
+    }
+
+    @Test
+    void testCheckoutBasket() {
+        basket.checkout();
+        assertTrue(basket.checkOutCompleted());
     }
 }
